Add footer component filels

--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -29,10 +29,10 @@ header {
   align-items: center;
 }
 
-.text-avail {
+.text_avail {
   color: #a5cf6f;
 }
-.text-closed {
+.text_closed {
   color: #e7040f;
 }
 
