--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,50 @@ body {
 p.text {
   margin: 0 0 0.5rem 0;
 }
+.section-layout {
+  display: flex;
+  flex-direction: column;
+}
+.section-container {
+  display: flex;
+  flex-direction: column;
+  width: 1470px;
+  max-width: 1470px;
+  padding-top: 156px;
+  padding-bottom: 156px;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.text-grid {
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto auto;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
+}
+
+.grid-container--content {
+  width: 100%;
+  justify-content: start;
+  justify-items: start;
+  align-items: start;
+  align-content: start;
+  grid-column-gap: 4rem;
+  grid-row-gap: 0;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto;
+}
+
+.grid-block--title {
+  display: flex;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  grid-column-end: 2;
+  grid-row-end: 2;
+}
+
+footer > .section-layout {
+  height: 50vh;
+}
