Update menu icon size, services, HomePage data, and style bug where h1 is underlined outside of blog page

--- a/src/index.css
+++ b/src/index.css
@@ -200,3 +200,11 @@ h1:hover {
   width: auto;
   vertical-align: middle;
 }
+
+.no-underline-hover {
+  text-decoration: none;
+}
+
+.no-underline-hover:hover {
+  text-decoration: none;
+}
