--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,11 @@ h1:hover {
   text-decoration-color: #e7040f;
 }
 
+.red-hover:hover {
+  text-decoration: underline;
+  text-decoration-color: #e7040f;
+}
+
 @media screen and (min-width: 960px) {
   .mh7-l {
     margin-left: 2rem;
@@ -202,9 +207,9 @@ h1:hover {
 }
 
 .no-underline-hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 .no-underline-hover:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
